--- a/docs/Account/methods.mdx
+++ b/docs/Account/methods.mdx
@@ -2,7 +2,7 @@
 title: Methods
 ---
 
-The SDK provides following methods for a smart account.
+The SDK provides the following methods for a smart account.
 
 ### BiconomySmartAccountV2: Create
 
