--- a/docs/Account/methods.mdx
+++ b/docs/Account/methods.mdx
@@ -27,7 +27,7 @@ const smartAccount = await BiconomySmartAccountV2.create({
 
 **Parameters**
 
-*required params are explictly mentioned*
+*required params are explicitly mentioned*
 
 - config (`object`, required): A `BiconomySmartAccountV2Config` object containing configuration options for creating the smart account.
   - chainId (`number`, required): The identifier for the blockchain network (e.g., ChainId.POLYGON_MUMBAI).
