--- a/docs/Modules/index.mdx
+++ b/docs/Modules/index.mdx
@@ -42,7 +42,7 @@ smartAccount = smartAccount.setActiveValidationModule( module )
 As per the code, the initial step is to verify whether the module is already enabled. If the module is not enabled, a transaction can be performed to enable it.
 
 :::note
-The module passed during the deployment acts as default validaiton module. This module gets used as an active validaiton module, if no other module is enabled.
+The module passed during the deployment acts as the default validation module. This module gets used as an active validation module if no other module is enabled.
 :::
 
 ## Validation Modules
