--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -13,7 +13,7 @@ This module acts as an extension of the [ECDSA Module](/Modules/ecdsa). The adde
 
 ### What is the Multichain Validation Module? 🤔
 
-This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts on Multiple chains with single ECDSA signature. 
+This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts on Multiple chains with a single ECDSA signature. 
 
 **Benefits**
 - significantly improves UX for deploying and setting up Smart Accounts on several chains 
