--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -36,8 +36,8 @@ Enables use cases which require several actions to be authorized for several cha
 
 1. Multichain intent for example exit all my native tokens for USDC
 2. Allows a dApp to require just one signature from their user to configure & deploy smart accounts on multiple chains and delegate certain actions with permission via session keys on all those chains
-3. Cross chain state sync actions e.g transfer ownership of a smart account, change ENS, similar actions on protocol that is deployed on multiple chains
-4. Onboard a user on x chains by deploying their smart account and some action like register in a raffle 
+3. Cross-chain state sync actions e.g transfer ownership of a smart account, change ENS, similar actions on a protocol that are deployed on multiple chains
+4. Onboard a user on x chains by deploying their smart account and some action like registering in a raffle 
 
 ### How does it work? 🤔
 
