--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -250,4 +250,6 @@ If the Smart Account has not been deployed yet then it makes sense to pass multi
 ## Conclusion
 It makes it easier for dApps to deploy and set up Smart Accounts across multiple chains or issue session keys with different permissions for each chain, reducing user difficulties.
 
-"Multichain module allows us to use session keys and setup sessions on multiple chains with single wallet signature." - [Rage Trade](https://www.rage.trade/)
+> Multichain module allows us to use session keys and setup sessions on multiple chains with single wallet signature.
+>
+> — [Rage Trade](https://www.rage.trade/)
