--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -20,7 +20,7 @@ This module allows **Externally Owned Accounts (EOAs)** to authorize and sign us
 - significantly reduces user friction for multichain operations.
 
 :::tip
-You can also use this module as the **default module** just like the ECDSA Validation Module, as it has all its capabilities for sending ops on the particular chain.
+You can also use this module as the **default module** just like the ECDSA Validation Module, as it has all its capabilities for sending userOps on the particular chain.
 :::
 
 #### Key Functions 🔐
