--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -16,8 +16,8 @@ This module acts as an extension of the [ECDSA Module](/Modules/ecdsa). The adde
 This module allows **Externally Owned Accounts (EOAs)** to authorize and sign user operations (UserOps) for Biconomy Smart Accounts on Multiple chains with a single ECDSA signature. 
 
 **Benefits**
-- significantly improves UX for deploying and setting up Smart Accounts on several chains 
-- significantly reduces user friction for multichain operations.
+- Significantly improves UX for deploying and setting up Smart Accounts on several chains 
+- Significantly reduces user friction for multichain operations.
 
 :::tip
 You can also use this module as the **default module** just like the ECDSA Validation Module, as it has all its capabilities for sending userOps on the particular chain.
