--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 # Integration
 
-This guide soley focuses on the code to integrate the Paymaster package. To see how this interacts with other packages in the sdk you can view the [Smart Accounts Integration page](/Account/integration).
+This guide soley focuses on the code to integrate the Paymaster. To see how this interacts with other packages in the sdk you can view the [Smart Accounts Integration page](/Account/integration).
 
 ## Installation
 
@@ -43,36 +43,48 @@ pnpm add @biconomy/paymaster
 </TabItem>
 </Tabs>
 
-## Old Integration Example
+## Integration 
+Assign a paymaster by providing only the paymaster api key to the smart account. By default this will use Sponsored mode.
 
-```typescript
-import { IPaymaster, BiconomyPaymaster } from "@biconomy/paymaster";
-
-// create instance of paymaster
-const paymaster: IPaymaster = new BiconomyPaymaster({
-  //https://dashboard.biconomy.io/ get paymaster urls from your dashboard
-  paymasterUrl: "",
-});
-```
-
-## New Integration Example
-You can now assign a paymaster by providing only the paymaster api key to the smart account. By default this will use Sponsored mode.
-
-```typescript
-// creating paymaster through "biconomyPaymasterApiKey"
-const biconomySmartAccount = await BiconomySmartAccountV2.create(
-  {
-    signer: signer,
-    chainId: 80001
-    biconomyPaymasterApiKey: "paymaster api key",
-    bundlerUrl: "bundler url"
-  }
-);
-```
 :::info
 
-[Click here](/dashboard/paymaster) to learn more about our dashboard and how to get your own Paymaster URL
+[Click here](/dashboard/paymaster) to learn more about our dashboard and how to get your Paymaster api key.
 
 :::
 
-Once initialized you will be able to pass this paymaster instance to the Smart Account configuration to use in conjunction with our Smart Accounts. See our [tutorials](/category/tutorials) for in depth integrations of the Smart Account and Paymaster.
+```typescript
+  import { BiconomySmartAccountV2 } from "@biconomy/account";
+
+
+  const biconomySmartAccount = await BiconomySmartAccountV2.create(
+    {
+      signer: signer,
+      chainId: 80001
+      biconomyPaymasterApiKey: "paymaster api key",
+      bundlerUrl: "bundler url"
+    }
+  );
+```
+If you wish to pass "strictMode" to your Paymaster you need to create the instace.
+
+```typescript
+  import { IPaymaster, BiconomyPaymaster } from "@biconomy/paymaster";
+  import { BiconomySmartAccountV2 } from "@biconomy/account";
+
+  const paymaster: IPaymaster = new BiconomyPaymaster({
+    //https://dashboard.biconomy.io/ get paymaster urls from your dashboard
+    paymasterUrl: "",
+    strictMode: true
+  });
+
+  const biconomySmartAccount = await BiconomySmartAccountV2.create(
+    {
+      signer: signer,
+      chainId: 80001
+      paymaster,
+      bundlerUrl: "bundler url"
+    }
+  );
+```
+
+You have now assigned the Paymaster to the smart account. See our [tutorials](/category/tutorials) for in depth integrations of the Smart Account and Paymaster.
