correct all the urls for account methods

--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -55,4 +55,4 @@ const module = await ECDSAOwnershipValidationModule.create({
 });
 ```
 
-Once initialized it can be passed to the smart account [create method](/Account/methods/create) to create a smart account.
+Once initialized it can be passed to the smart account [create method](/Account/methods#create) to create a smart account.
