--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -55,7 +55,7 @@ const multiChainModule = await MultiChainValidationModule.create({
 });
 ```
 
-Once initialized it can be passed to the smart account [create method](/Account/methods/create) to create a smart account.
+Once initialized it can be passed to the smart account [create method](/Account/methods#create) to create a smart account.
 
 Here is how you can set up Smart Account instances accross multiple chains:
 
