--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -76,11 +76,16 @@ Or you can create your own instance of the Bundler if you wish to pass more para
 ```typescript
   import { Bundler } from "@biconomy/bundler";
   import { BiconomySmartAccountV2 } from "@biconomy/account";
+  import { ChainId } from '@biconomy/core-types';
+
+  const userOpReceiptMaxDurationIntervals: { [key in ChainId]?: number } = {
+      [ChainId.POLYGON_MAINNET]: 60000,
+  }
 
   const bundler = new Bundler({
     bundlerUrl: "bundler url",
     chainId: 80001,
-    userOpWaitForTxHashIntervals: 1000
+    userOpWaitForTxHashIntervals
   });
 
   const biconomySmartAccountConfig = {
